<resources>
    <string name="app_name">Mountain View Girls Camp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_share">Share</string>
    <string name="action_done">Done</string>
    <string name="study_guides">Study Guides</string>
    <string name="pictures">Pictures</string>
    <string name="quotes">Temple Quotes\nFrom the Blind Walk</string>
    <string name="game">Temple Trivia Game</string>
    <string name="faith_friendships">Faith &amp; Friendships</string>
    <string name="personal_rev">Personal Revelation\n &amp; The Temple</string>
    <string name="tempation">Temptation</string>
    <string name="theme">The Young Women\'s\nTheme</string>
    <string name="title_activity_photo">PhotoActivity</string>
    <string name="title_activity_study_guide">StudyGuideActivity</string>
    <string name="title_activity_study_guide_select">StudyGuideSelectActivity</string>
    <string name="title_activity_photo_album">PhotoAlbumActivity</string>
    <string name="action_settings">Settings</string>
    <string name="photo_albums">Photo Albums</string>
    <string name="title_activity_trivia_game">TriviaGameActivity</string>
    <string name="answer_text">Answer</string>
    <string name="score">Score: </string>
    <string name="zero">0</string>
</resources>