<FrameLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/study_guide_frag_container"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		style="@style/FragmentTheme"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:gravity="center_vertical"
			android:orientation="vertical">

			<Button
				android:id="@+id/btn_rev"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:text="@string/personal_rev"/>
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:gravity="center_vertical"
			android:orientation="vertical">

			<Button
				android:id="@+id/btn_temptation"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:text="@string/tempation"/>
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:gravity="center_vertical"
			android:orientation="vertical">

			<Button
				android:id="@+id/btn_faith"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:text="@string/faith_friendships"/>
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:gravity="center_vertical"
			android:orientation="vertical">

			<Button
				android:id="@+id/btn_theme"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:text="@string/theme"/>
		</LinearLayout>

	</LinearLayout>
</FrameLayout>